--- a/components/post/style.module.css
+++ b/components/post/style.module.css
@@ -25,6 +25,11 @@
 }
 
 .ytVideoCont {
+
+    /* display: flex;
+    overflow-x: auto;
+    gap: 1rem; */
+
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: min(500px, 100%);
@@ -35,6 +40,12 @@
 .imgCont {
     display: flex;
     overflow-x: auto;
-    height: 400px;
     gap: 1rem;
 }
+
+
+/* @media only screen and (max-width: 600px) {
+    .ytVideoCont {}
+
+
+} */
