--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,17 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 *,
 *::before,
 *::after {
     box-sizing: border-box;
-    border: 1px solid red !important
+    /* border: 1px solid red !important */
+}
+
+html {
+    background-color: #333;
+    color: #fff;
 }
 
 body {
