--- a/components/community/style.module.css
+++ b/components/community/style.module.css
@@ -1,5 +1,4 @@
 .communityMainDiv {
-    background-color: rgb(209, 255, 255);
-    padding-block: 3rem;
-    padding-inline: 1rem;
+    background-color: #555;
+    padding: 1rem;
 }
