--- a/components/post/style.module.css
+++ b/components/post/style.module.css
@@ -21,6 +21,8 @@
     background-color: #666;
     padding: 1rem;
     display: grid;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 
 .ytVideoCont {
