--- a/app/globals.css
+++ b/app/globals.css
@@ -51,3 +51,12 @@ button {
     background-color: #111;
     border-radius: .5rem;
 }
+
+input {
+    padding: 1rem;
+    color: #000;
+}
+
+.timeText {
+    font-style: italic;
+}
