--- a/components/community/style.module.css
+++ b/components/community/style.module.css
@@ -1,6 +1,11 @@
 .communityMainDiv {
     background-color: #555;
-    padding: 1rem;
     border-top-left-radius: 0rem !important;
     border-top-right-radius: 0rem !important;
+}
+
+
+.makeCommunityMainDiv {
+    display: grid;
+    padding: 1rem;
 }
