--- a/components/post/style.module.css
+++ b/components/post/style.module.css
@@ -1,8 +1,9 @@
 /* Display all posts */
 .DisplayAllPostsMainDiv {
-    padding: 0rem 1rem 1rem 0rem;
+    /* padding: 0rem 1rem 1rem 0rem; */
+    padding: 0rem 2rem;
     display: grid;
-    gap: 1rem;
+    gap: 3rem;
 }
 
 
