--- a/components/post/style.module.css
+++ b/components/post/style.module.css
@@ -1,7 +1,6 @@
 /* Display all posts */
 .DisplayAllPostsMainDiv {
-    /* padding: 0rem 1rem 1rem 0rem; */
-    padding: 0rem 2rem;
+    padding: 0rem 2rem 2rem 2rem;
     display: grid;
     gap: 3rem;
 }
