--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,9 @@ body {
 
 .bigText {}
 
-.smallText {}
+.smallText {
+    font-size: .5rem;
+}
 
 h1 {
     font-size: 1.5rem;
@@ -81,6 +83,7 @@ input::placeholder {
 
 .timeText {
     font-style: italic;
+    font-size: .7rem;
 }
 
 
@@ -100,8 +103,13 @@ input::placeholder {
 .wordLink {
     font-style: italic;
     cursor: pointer;
+    margin-top: 1rem;
+    text-transform: capitalize;
 }
 
+.wordLink:hover {
+    filter: brightness(.7);
+}
 
 
 
