--- a/app/globals.css
+++ b/app/globals.css
@@ -16,11 +16,15 @@
 html {
     background-color: #222;
     color: #fff;
+    min-height: 100vh;
+    display: grid;
 }
 
 body {
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 .bigText {}
@@ -115,6 +119,20 @@ time {
     filter: brightness(.7);
 }
 
+.dimOnMouse:hover {
+    filter: brightness(.9);
+}
+
+.highlightOnMouse {
+    border-right: 3px solid transparent;
+}
+
+.highlightOnMouse:hover {
+    filter: brightness(1.3);
+    border-right: 3px solid #fff;
+
+}
+
 
 
 
@@ -132,6 +150,22 @@ time {
 
 .noScrollBar::-webkit-scrollbar {
     display: none;
+}
+
+
+.niceScrollbar::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+    border-radius: 1rem;
+}
+
+.niceScrollbar::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 1rem;
+}
+
+.niceScrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .showUnderline {
