--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 }
 
 html {
-    background-color: #222;
+    background-color: #FBFEF9;
     color: #fff;
     min-height: 100vh;
     display: grid;
