--- a/components/community/style.module.css
+++ b/components/community/style.module.css
@@ -3,6 +3,7 @@
     border-top-left-radius: 0rem !important;
     border-top-right-radius: 0rem !important;
     display: grid;
+    color: #fff;
 }
 
 
