--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,10 @@
 }
 
 html {
-    background-color: #FBFEF9;
-    color: #fff;
+    color: #000;
     min-height: 100vh;
     display: grid;
+
 }
 
 body {
@@ -25,6 +25,7 @@ body {
     padding: 0;
     display: grid;
     grid-template-rows: auto 1fr;
+    background-color: rgb(var(--backgroundColor))
 }
 
 .bigText {}
@@ -69,6 +70,8 @@ button {
     padding: 1rem;
     background-color: #111;
     border-radius: .5rem;
+    color: #fff !important;
+
 }
 
 button:hover {
@@ -77,7 +80,8 @@ button:hover {
 
 input {
     padding: 1rem;
-    color: #000;
+    color: #fff;
+    background-color: #2c2c2c;
 }
 
 input+button {
