--- a/components/post/style.module.css
+++ b/components/post/style.module.css
@@ -2,7 +2,8 @@
 .postMainDiv {
     background-color: #666;
     padding: 1rem;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
