--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 *::before,
 *::after {
     box-sizing: border-box;
-    border: 1px solid red !important
+    /* border: 1px solid red !important */
 }
 
 html {
